--- a/f-35.ipynb
+++ b/f-35.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM60SfE4zuzu162UhX9OiIW",
+      "authorship_tag": "ABX9TyMFlZh09XDmBUubBoTfQf6W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "data/\n",
+        "  train/\n",
+        "    F-35/\n",
+        "      img001.jpg\n",
+        "      ...\n",
+        "    Other/\n",
+        "      ...\n",
+        "  val/\n",
+        "    F-35/\n",
+        "    Other/\n",
+        "  test/\n",
+        "    F-35/\n",
+        "    Other/\n"
+      ],
+      "metadata": {
+        "id": "ki5VqDNkaecF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
